@@ -1,0 +1,42 @@
+Manifest-Version: 1.0
+Bundle-ManifestVersion: 2
+Bundle-Name: OVal - the Object Validation Framework for Java 5 or later
+Bundle-SymbolicName: net.sf.oval;singleton:=true
+Bundle-Vendor: oval.sf.net
+Bundle-RequiredExecutionEnvironment: J2SE-1.5
+Require-Bundle: org.aspectj.runtime;bundle-version="1.6.0";resolution:=optional,
+ org.apache.commons.logging;resolution:=optional,
+ org.apache.commons.jexl;resolution:=optional,
+ org.apache.log4j;resolution:=optional,
+ org.codehaus.groovy;resolution:=optional,
+ org.thoughtworks.paranamer;resolution:=optional,
+ org.thoughtworks.xstream;resolution:=optional,
+ org.mvel;resolution:=optional,
+ org.mozilla.javascript;resolution:=optional,
+ org.jruby;resolution:=optional,
+ org.springframework.bundle.spring;resolution:=optional
+Export-Package: net.sf.oval,
+ net.sf.oval.collection,
+ net.sf.oval.configuration,
+ net.sf.oval.configuration.annotation,
+ net.sf.oval.configuration.pojo,
+ net.sf.oval.configuration.pojo.elements,
+ net.sf.oval.configuration.xml,
+ net.sf.oval.constraint,
+ net.sf.oval.context,
+ net.sf.oval.exception,
+ net.sf.oval.expression,
+ net.sf.oval.guard,
+ net.sf.oval.integration.spring,
+ net.sf.oval.internal,
+ net.sf.oval.internal.util,
+ net.sf.oval.localization,
+ net.sf.oval.logging
+Eclipse-BuddyPolicy: registered
+Eclipse-LazyStart: true
+
+Name: net/sf/oval/internal
+Sealed: true
+
+Name: net/sf/oval/internal/util
+Sealed: true
