@@ -6,6 +6,7 @@ package net.sf.oval.internal;
 import java.util.Map;
 import java.util.Map.Entry;
 
+import net.sf.oval.Validator;
 import net.sf.oval.internal.util.StringUtils;
 
 /**
@@ -14,16 +15,13 @@ import net.sf.oval.internal.util.StringUtils;
  */
 public final class MessageRenderer
 {
-	private MessageRenderer()
+	public static String renderMessage(final String messageKey, final Map<String, String> messageValues)
 	{
-	// do nothing
-	}
-
-	public static String renderMessage(final String messageKey,
-			final Map<String, String> messageValues)
-	{
-		String message = MessageResolverHolder.getMessageResolver().getMessage(messageKey);
-		if (message == null) message = messageKey;
+		String message = Validator.getMessageResolver().getMessage(messageKey);
+		if (message == null)
+		{
+			message = messageKey;
+		}
 
 		// if there are no place holders in the message simply return it
 		if (message.indexOf('{') == -1) return message;
@@ -32,8 +30,7 @@ public final class MessageRenderer
 		{
 			for (final Entry<String, String> entry : messageValues.entrySet())
 			{
-				message = StringUtils.replaceAll(message, "{" + entry.getKey() + "}", entry
-						.getValue());
+				message = StringUtils.replaceAll(message, "{" + entry.getKey() + "}", entry.getValue());
 			}
 		}
 		return message;
@@ -41,8 +38,11 @@ public final class MessageRenderer
 
 	public static String renderMessage(final String messageKey, final String[][] messageValues)
 	{
-		String message = MessageResolverHolder.getMessageResolver().getMessage(messageKey);
-		if (message == null) message = messageKey;
+		String message = Validator.getMessageResolver().getMessage(messageKey);
+		if (message == null)
+		{
+			message = messageKey;
+		}
 
 		// if there are no place holders in the message simply return it
 		if (message.indexOf('{') == -1) return message;
@@ -55,5 +55,10 @@ public final class MessageRenderer
 			}
 		}
 		return message;
+	}
+
+	private MessageRenderer()
+	{
+	// do nothing
 	}
 }
