@@ -20,7 +20,9 @@
 + added support for logging via SLF4J
 + added constraint check exclusion feature which can be used for fine-grained deactivation of constraints
 + added @net.sf.oval.constraint.exclusion.Nullable constraint check exclusion
-
+* renamed MessageResolverImpl to ResourceBundleMessageResolver
+* moved MessageResolver classes from net.sf.oval.localization to net.sf.oval.localization.message
++ introduced net.sf.oval.localization.context.OValContextRenderer
 
 2008-04-05 v1.20
 ================
